[package]
name = "dumnati"
version = "0.0.1-dev"
authors = ["Luca Bruno <luca.bruno@coreos.com>"]
edition = "2018"

[dependencies]
actix = "^0.7.9"
actix-web = "^0.7.8"
cbloom = "^0.1.3"
chrono = "^0.4.7"
env_logger = "^0.6.0"
envsubst = "^0.1.1"
failure = "^0.1.1"
futures = "0.1"
lazy_static = "^1.3.0"
log = "^0.4.3"
maplit = "^1.0"
prometheus = "^0.7.0"
reqwest = "^0.9.18"
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
structopt = "^0.2.10"
