[package]
name = "fcos-policy-engine"
version = "0.1.0"
authors = ["Allen Bai <abai@redhat.com>"]
edition = "2018"
publish = false

[dependencies]
actix = "^0.9.0"
actix-web = "^2.0.0"
cbloom = "^0.1.3"
chrono = "^0.4.7"
commons = { path = "../commons" }
env_logger = "^0.7.1"
envsubst = "^0.2"
failure = "^0.1.1"
futures = "^0.3.1"
lazy_static = "^1.3.0"
log = "^0.4.3"
maplit = "^1.0"
prometheus = "^0.9"
reqwest = { version = "^0.10.1", features = ["json"] }
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
structopt = "^0.3.7"
