[package]
name = "fcos-policy-engine"
version = "0.1.0"
authors = ["Allen Bai <abai@redhat.com>"]
edition = "2018"
publish = false

[dependencies]
actix = "0.13"
actix-web = "4.1"
cbloom = "^0.1.3"
chrono = "^0.4.7"
commons = { path = "../commons" }
env_logger = "^0.8"
envsubst = "^0.2"
failure = "^0.1.1"
futures = "^0.3.1"
lazy_static = "^1.3.0"
log = "^0.4.3"
maplit = "^1.0"
prometheus = "0.13"
reqwest = { version = "^0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.22"
serde_qs = "0.9.2"
structopt = "^0.3.7"
